fix alignment of 'see all our policies' on worldwide show pages
Re: task 25 https://www.pivotaltracker.com/story/show/65640954

--- a/app/assets/stylesheets/frontend/views/_world_locations.scss
+++ b/app/assets/stylesheets/frontend/views/_world_locations.scss
@@ -116,6 +116,16 @@
     }
   }
 
+  @include media(tablet) {
+    .heading-block {
+      .content {
+        .see-all {
+          padding: $gutter-half;
+        }
+      }
+    }
+  }
+
   .keyline-header {
     @include heading-36;
     border-bottom: $gutter-one-sixth solid $inside-gov-nav;
